# ic-ocr-cataloger

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  default_config.ini  pyproject.toml
.github/workflows/: pylint.yml
data/: amd.txt  burr-brown.txt  csi.txt  dallas.txt  fairchild-ic.txt  families.tsv  intel.tsv  intersil.txt  misc.tsv  mosel.txt  motorola-8bit.txt  motorola-ic.txt  national-xref.txt  national.txt  prefixes.json  rca.txt  signetics.tsv  silicon-general.txt  ti.tsv  umc.txt  xicor.tsv
ic_ocr_cataloger/: __init__.py  __main__.py  app.py  camera.py  catalog.py  default_config.ini  filters.py  fonts.py  keyhandler.py  models.py  ocr.py  philips.tsv  search.py  test_types.py  ui.py  util.py
ic_ocr_cataloger/data/: amd.tsv  amd.txt  ami.tsv  ami.txt  burr-brown.tsv  burr-brown.txt  csi.tsv  csi.txt  dallas.tsv  dallas.txt  fairchild-ic.tsv  fairchild-ic.txt  families.tsv  harris.tsv  intel.tsv  intersil.tsv  itt.tsv  misc.tsv  mosel.tsv  mostek.tsv  motorola-8bit.tsv  motorola-ic.tsv  national-xref.txt  national.tsv  national.txt  nec.tsv  nec.txt  philips.tsv  pmi.tsv  raytheon.tsv  rca.tsv  rca.txt  renesas.tsv  rockwell.tsv  signetics.tsv  silicon-general.tsv  silicon-general.txt  sony.tsv  ti.tsv  toshiba.tsv  (+1 more)
ic_ocr_cataloger/keys/: main.py
ic_ocr_catalogger/: app.py  catalog.py
